# esgf-dashboard

./: .classpath  .gitignore  .project  Analyzer.py  INSTALL  LICENSE  README  build.xml  build.xml.orig  dw_schema.sql  index.html  ivy.xml  ivysettings.xml
docs/: SQL_utils  header
docs/notes/: metrics_aggregator_notes.txt
etc/: esgf-dashboard.ant.properties
etc/conf/: commons-logging.properties  esgf-dashboard-web.xml  esgf-dashboard.properties  global-messages.properties  global-messages_en.properties  log4j.properties  struts.properties  struts.xml
etc/db/: README  make_python
etc/db/sql/: README  attivitaServizio.sql  attivitaServizioOnOff.sql  avgHostActivity.sql  avgProjectActivity.sql  avgServiceActivity.sql  esgf_dash_country.sql  esgf_dash_host.sql  esgf_dash_join1.sql  esgf_dash_news.sql  esgf_dash_opendap_node.sql  esgf_dash_project_dash.sql  esgf_dash_service_instance.sql  esgf_dash_user1.sql  esgf_dash_uses.sql  esgf_dashboard_database_initial_dbsuper_user.sql  esgf_dashboard_database_initial_esgcet_user.sql  hostActivity.sql  hostActivity1.sql  load_schema_and_data.sh  mostActiveHost.sql  mostActiveProjects.sql  mostActiveServices.sql  registry.sql  rttRilevamentiServizio.sql
src/c/GeoIP-1.4.8/: Makefile.in  configure
src/c/GeoIP-1.4.8/apps/: Makefile.in
src/c/GeoIP-1.4.8/conf/: Makefile.in
src/c/GeoIP-1.4.8/data/: Makefile.in
src/c/GeoIP-1.4.8/libGeoIP/: Makefile.in
src/c/GeoIP-1.4.8/man/: Makefile.in
src/c/GeoIP-1.4.8/test/: Makefile.in
src/c/esgf-dashboard-ip/: AUTHORS  Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac  configure.sh
src/c/esgf-dashboard-ip-mysql/: .cproject
src/c/esgf-dashboard-ip-mysql/src/: Makefile  dbAccess.h  main  ping.c  ping.h
src/c/esgf-dashboard-ip-postgresql/: .project
src/c/esgf-dashboard-ip-postgresql/src/: Makefile  Makefile.mymac  config.h  dbAccess.c  info-service.sh  main.c  ping.c
src/c/esgf-dashboard-ip/etc/: conf.xml  config.xml  config_bak.xml  infoprovider.properties  notauthorized_openID
src/c/esgf-dashboard-ip/include/: config.h  dbAccess.h  debug.h  error.h  ftpget.h  ping.h  stats.h
src/c/esgf-dashboard-ip/src/: Makefile.am  Makefile.in  config.h  dbAccess.c  debug.c  esgf-dashboard-insert-dw.c  esgf-dashboard-ip.c  esgf-dashboard-parser.c  esgf-getrawstats.c  esgf-iplookup.c  esgf-libiplookup.c  esgf-libstats.c  esgf-stats-aggregator.c  ftpget.c  hashtbl.c  htablex_main.c  main.c  ping.c  val-ip.sh  val-ip2.sh  xml_parser.c  xmlreader.c
src/c/esgf-dashboard-ip/src/stats_storage_engine/: Makefile  debug.c  display.c  infoprovider.properties  iplookup.c  iplookup2.c  libiplookup.c  realtime.c  runtop.c  test.c  val-ip.sh  val-ip2.sh
src/c/library_solr/: Makefile  config.h  debug.c  esgf-dashboard-insert-dw.c  esgf-libiplookup.c  ftpget.c  hashtbl.c  hashtbl.h  quick_sort.c  xmlexample  xmlreader.c
src/c/library_solr/conf/: conf.xml  conf_16.xml  conf_old.xml
src/java/main/: conf-messages.properties  global-messages.properties  global-messages_en.properties  struts.properties  struts.xml
src/java/main/org/esg/node/actions/: AllProjectsAction.java  ProjectAction.java  ServerAction.java  publicActions.xml
src/java/main/org/esg/node/beans/: ActivityRecord.java  ActivityTable.java  AvgHostActivityBean.java  Country.java  (+20 more)
src/python/esgf/: README  setup.py.tmpl
src/python/esgf/esgf-dashboard/: __init__.py
src/python/esgf/esgf-dashboard/model/: __init__.py
src/python/esgf/esgf-dashboard/schema_migration/: 001_postgres_downgrade.sql  001_postgresql_upgrade.sql  002_postgres_upgrade.sql  004_postgresql_upgrade.sql  005_postgres_upgrade.sql  005_postgresql_downgrade.sql  006_postgresql_downgrade.sql  007_postgres_upgrade.sql  008_postgres_upgrade.sql  migrate.cfg
src/python/esgf/esgf-dashboard/schema_migration/versions/: 001_postgres_upgrade.sql  001_postgresql_downgrade.sql  001_postgresql_upgrade.sql  002_postgres_downgrade.sql  002_postgres_upgrade.sql  002_postgresql_downgrade.sql  002_postgresql_upgrade.sql  003_postgres_downgrade.sql  003_postgres_upgrade.sql  003_postgresql_downgrade.sql  003_postgresql_upgrade.sql  004_postgres_downgrade.sql  004_postgresql_downgrade.sql  004_postgresql_upgrade.sql  005_postgres_downgrade.sql  005_postgres_upgrade.sql  006_postgres_upgrade.sql  007_postgres_downgrade.sql  007_postgres_upgrade.sql  007_postgresql_downgrade.sql  007_postgresql_upgrade.sql  008_postgres_downgrade.sql  008_postgres_upgrade.sql  008_postgresql_upgrade.sql  009_postgres_downgrade.sql  009_postgres_upgrade.sql  009_postgresql_downgrade.sql  009_postgresql_upgrade.sql  010_postgres_upgrade.sql  010_postgresql_downgrade.sql  010_postgresql_upgrade.sql  011_postgres_downgrade.sql  011_postgres_upgrade.sql  011_postgresql_downgrade.sql  011_postgresql_upgrade.sql  012_postgres_upgrade.sql  012_postgresql_downgrade.sql  012_postgresql_upgrade.sql  013_postgres_downgrade.sql  013_postgresql_upgrade.sql
src/python/esgf/scripts/: esgf_dashboard_initialize.tmpl
web/: home.jsp  index.jsp
web/css/: MultiSelect.css  Spinner.css  TagCloud.css  rating.css  style-gray.css  style.css
web/export/: globalView.html  opendapRegistry.html  project.html  server.html
web/homepage/: front.css  home.jsp  styles.css
web/js/: commons.js  home.js  layout-mini.js  layout.js
web/js/content/: allProjects.js  commonsProject.js  form1.js  project.js  projectRegistry.js  server.js
web/js/earth/: earthInit.js
web/js/ext/ux/: TagCloud.js  rating.js
web/jsp/: accessDenied.jsp  activationStatus.jsp  allProjects.jsp  error.jsp  login.jsp  opendapRegistry.jsp  project.jsp  registration.jsp  server.jsp  userProfile.jsp
web/jsp/commons/: header.jsp  homeLayout.jsp  include.jsp  layout.jsp
web/jsp/parts/: infoWindow.jsp  layoutOpendapService.jsp  layoutServiceGrid.jsp  layoutServiceTab.jsp  projectBodyPart.jsp  projectHeaderPart.jsp
web/rotator/: playlist.xml
web/xsl/: activity.xslt  mostActiveHosts.xslt  mostActiveProjects.xslt  mostActiveServices.xslt  rtt.xslt  tree.xslt  xml.xslt
web_old/web/: index.tmpl.html  styles.css
(+98 files in other folders)
